--- a/index.html
+++ b/index.html
@@ -393,14 +393,58 @@
   
 
 
-  <div class="container-fluid">
 
-      <div class="loop-container">
-        <div class="item display-2" data-linewords="| Samsung | Apple | OPPO | Honor | Huawei | Nokia | UGREEN | baseus | ANKER | belkin | mycandy | GREEN LION | soundcore | RIVERSONG" data-direction="-1" data-speed="0.03">☁️ Best offers ☁️ Free delivery ☁️ Perfect design ☁️ Comfort ☁️ Support 24/7 ☁️ Vibes</div>
-        <div class="item display-2" data-linewords="| Samsung | Apple | OPPO | Honor | Huawei | Nokia | UGREEN | baseus | ANKER | belkin | mycandy | GREEN LION | soundcore | RIVERSONG" data-direction="-1" data-speed="0.03">☁️ Best offers ☁️ Free delivery ☁️ Perfect design ☁️ Comfort ☁️ Support 24/7 ☁️ Vibes</div>
-      </div>
-    
-  </div>
+    <div class="slider" style="height: 100px; margin: auto; overflow: hidden; position: relative; width: auto;">
+        <div class="slide-track" style="display: flex; animation: scroll 40s linear infinite; width: calc(250px * 14);">
+            <div class="slide" style="height: 100px; width: 250px;">
+                <img src="images/2.png" height="100" width="250" alt="" />
+            </div>
+            <div class="slide" style="height: 100px; width: 250px;">
+                <img src="images/3.png" height="100" width="250" alt="" />
+            </div>
+            <div class="slide" style="height: 100px; width: 250px;">
+                <img src="images/4.png" height="100" width="250" alt="" />
+            </div>
+            <div class="slide" style="height: 100px; width: 250px;">
+                <img src="images/5.png" height="100" width="250" alt="" />
+            </div>
+            <div class="slide" style="height: 100px; width: 250px;">
+                <img src="images/6.png" height="100" width="250" alt="" />
+            </div>
+            <div class="slide" style="height: 100px; width: 250px;">
+                <img src="images/7.png" height="100" width="250" alt="" />
+            </div>
+            <div class="slide" style="height: 100px; width: 250px;">
+                <img src="images/1.png" height="100" width="250" alt="" />
+            </div>
+            <div class="slide" style="height: 100px; width: 250px;">
+                <img src="images/8.png" height="100" width="250" alt="" />
+            </div>
+            <div class="slide" style="height: 100px; width: 250px;">
+                <img src="images/9.png" height="100" width="250" alt="" />
+            </div>
+            <div class="slide" style="height: 100px; width: 250px;">
+                <img src="images/10.png" height="100" width="250" alt="" />
+            </div>
+            <div class="slide" style="height: 100px; width: 250px;">
+                <img src="images/11.png" height="100" width="250" alt="" />
+            </div>
+            <div class="slide" style="height: 100px; width: 250px;">
+                <img src="images/12.png" height="100" width="250" alt="" />
+            </div>
+            <div class="slide" style="height: 100px; width: 250px;">
+                <img src="images/13.png" height="100" width="250" alt="" />
+            </div>
+        </div>
+    </div>
+
+    <style>
+        @keyframes scroll {
+            0% { transform: translateX(0); }
+            100% { transform: translateX(calc(-250px * 7)); }
+        }
+    </style>
+
 </section>
 
 <section data-bs-version="5.1" class="features15 cid-tLek7gQhG7" id="features015-m">
