--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
 						<img src="assets/images/shop1.jpg" alt="Mobirise Website Builder" data-slide-to="1" data-bs-slide-to="1">
 					</div>
 					<div class="card-box">
-						<h4 class="card-title mbr-fonts-style mb-3 display-5"><strong>Easy care Technical Services.</strong></h4>
+						<h4 class="card-title mbr-fonts-style mb-3 display-5"><strong>Fastest Mobile Repair Services.</strong></h4>
 						<h5 class="card-text mbr-fonts-style display-7">Trust us in what we do…Since we do it better than none! Facilitating minute care through Easy care services, we bring the best of repair &amp; services in resolving issues with your gadgets.</h5>
 					</div>
 				</div>
