--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		<div class="container">
 			<div class="navbar-brand">
 				<span class="navbar-logo">
-					<a href="http://alwafimobile.com">
+					<a href="https://alwafimobile.com" target="_blank">
 						<img src="assets/images/1-2f1192b9-96x42.png" alt="Al Wafi Mobiles Trading Logo" style="height: 3.4rem;">
 					</a>
 				</span>
@@ -59,7 +59,7 @@
 						<a class="nav-link link text-black text-primary display-4" href="index.html#gallery02-v">Services</a>
 					</li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#contacts02-9">Contact us</a></li></ul>
 				
-				<div class="navbar-buttons mbr-section-btn"><a class="btn btn-primary display-4" href="http://wa.me/971569099554"><span class="socicon socicon-whatsapp mbr-iconfont mbr-iconfont-btn"></span>WhatsApp</a></div>
+				<div class="navbar-buttons mbr-section-btn"><a class="btn btn-primary display-4" href="https://wa.me/971569099554" target="_blank"><span class="socicon socicon-whatsapp mbr-iconfont mbr-iconfont-btn"></span>WhatsApp</a></div>
 			</div>
 		</div>
 	</nav>
