--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="description" content="">
   
   
-  <title>Home</title>
+  <title>Al Wafi Mobile</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -37,7 +37,7 @@
 		<div class="container">
 			<div class="navbar-brand">
 				<span class="navbar-logo">
-					<a href="https://alwafimobile.com" target="_blank">
+					<a href="https://alwafimobile.com" target="">
 						<img src="assets/images/1-2f1192b9-96x42.png" alt="Al Wafi Mobiles Trading Logo" style="height: 3.4rem;">
 					</a>
 				</span>
